--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
             </div>
         </div>
 
+        <!--  align central -->
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <p align="center">
+                <img
+                    border="0"
+                    src="gifs/CARS/cars_demo2.gif"
+                    style="width: 50%"
+                />
+            </p>
+            <p align="center">
+                <img
+                    border="0"
+                    src="gifs/CARS/cars_demo1.gif"
+                    style="width: 50%"
+                />
+            </p>
+             </div>
+
         <!--------------------- Abstract --------------------->
         <br />
         <div class="container">
