--- a/index.html
+++ b/index.html
@@ -86,15 +86,8 @@
             <p align="center">
                 <img
                     border="0"
-                    src="gifs/CARS/cars_demo2.gif"
-                    style="width: 50%"
-                />
-            </p>
-            <p align="center">
-                <img
-                    border="0"
-                    src="gifs/CARS/cars_demo1.gif"
-                    style="width: 50%"
+                    src="gifs/CARS/cars_demo.gif"
+                    style="width: 75%"
                 />
             </p>
              </div>
